Prevent HorizontalButtonGroup from wrapping to multiple lines (#13178)

--- a/vaadin-touchkit-agpl/src/main/java/com/vaadin/addon/touchkit/gwt/client/theme/touchkit.css
+++ b/vaadin-touchkit-agpl/src/main/java/com/vaadin/addon/touchkit/gwt/client/theme/touchkit.css
@@ -2257,6 +2257,7 @@ select.v-select-select::-ms-expand {
 	padding:0;
 	display:inline-block;
 	overflow: visible;
+	white-space: nowrap;
 }
 
 .v-touchkit-componentgroup-cell>.v-touchkit-horizontalbuttongroup {
